// Copyright 2020-2023 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.alpha.registry.v1alpha1;

import "google/protobuf/timestamp.proto";

// GitIdentity is a Git user identity, typically either an author or a commiter.
message GitIdentity {
  // Name is the name of the Git identity. This is not the BSR user's username.
  string name = 1;
  // Email is the email of the Git identity. This is not the BSR user's email.
  string email = 2;
  // Time is the time at which this identity was captured.
  google.protobuf.Timestamp time = 3;
}

// GitCommitMetadata is Git metadata associated with a BSR commit.
message GitCommitMetadata {
  // Hash is the SHA1 has of the Git commit.
  string hash = 1;
  // Author is the author of the Git commit. This is typically an end-user.
  GitIdentity author = 2;
  // Commiter is the commiter of the Git commit. This typically a CI system.
  GitIdentity commiter = 3;
  // Branch is the Git branch to which this Git commit belongs.
  string branch = 4;
  // Tags are the Git tags which point to this commit.
  repeated string tags = 5;
}
